# itk_tasks

./: README.md  pyproject.toml
src/: 1_lru_cache.py  3_metaclass_created_at.py  4_binary_search.py  8_wsgi_app.py
src/2_singleton/: singleton_import.py  singleton_import_using.py  singleton_meta.py  singleton_new.py
src/5_6_async_http_tasks/: 5_async_http.py  6_async_http_upgrade.py  results.jsonl  update_task_result.jsonl  urls.txt
src/7_concurrency_task/: 7_concurrency.py  multiprocessing_results.json
